--- a/layouts/default.html
+++ b/layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>fr.ench.info &mdash; <%= @item[:title] %></title>
     <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="/assets/css/coderay.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/css/fruity.css" media="screen">
 
     <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>"> 
