--- a/layouts/default.html
+++ b/layouts/default.html
@@ -32,6 +32,10 @@
               <li><a target="_blank" href="http://last.fm/user/dsdeiz"><i class="icon-music"></i> Lastfm</a></li>
             </ul>
           </section>
+
+          <section>
+            <%= render 'related_articles' if @item[:kind] == 'article' %>
+          </section>
         </aside>
       </div>
     </div>
