--- a/tags/views/index.html
+++ b/tags/views/index.html
@@ -52,6 +52,10 @@ I...</p>
               <li><a target="_blank" href="http://last.fm/user/dsdeiz"><i class="icon-music"></i> Lastfm</a></li>
             </ul>
           </section>
+
+          <section>
+            
+          </section>
         </aside>
       </div>
     </div>
