Changed font.. xD

--- a/content/assets/sass/_base.scss
+++ b/content/assets/sass/_base.scss
@@ -1,7 +1,7 @@
 $base-font-size:    14px;
 $base-line-height:  20px;
 
-$special-serif:       'Arbutus Slab';
+$special-serif:       'Libre Baskerville';
 $special-sans-serif:  'Carrois Gothic';
 $serif:               Georgia, "Times New Roman", "DejaVu Serif", serif;
 $sans-serif:          Verdana, Tahoma, "DejaVu Sans", sans-serif;
