--- a/layouts/default.html
+++ b/layouts/default.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="<%= url_with_hash_for('/assets/sass/screen/') %>" media="screen">
     <link rel="stylesheet" type="text/css" href="<%= url_with_hash_for('/assets/css/monokai/') %>" media="screen">
     <link rel="stylesheet" type="text/css" href="<%= url_with_hash_for('/assets/css/colorbox/') %>" media="screen">
+    <link href='http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic' rel='stylesheet' type='text/css'>
 
     <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>"> 
