--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1438,7 +1438,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Verdana, Tahoma, "DejaVu Sans", sans-serif;
+  font-family: "Libre Baskerville", Georgia, "Times New Roman", "DejaVu Serif", serif;
 }
 
 a:link, a:visited {
